# nightjava-1.21.11

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.trae/documents/: DataFixer_C++_优化方案.md  Minecraft_粒子计算C++_DLL优化方案.md
native/: CMakeLists.txt
native/build_cmake/: CMakeCache.txt
native/include/: datafixer_native.h  entity_collision.h  light_native.h  particle_native.h  particle_simd.h  render_frustum.h
native/src/: datafixer_native.cpp  entity_collision.cpp  light_native.cpp  light_propagation.cpp  particle_native.cpp  particle_physics.cpp  particle_render.cpp  render_frustum.cpp
src/main/java/com/nj/light/: NightjavaDirectBufferAccess.java
src/main/java/com/nj/mixin/: BillboardParticleRendererMixin.java  ChunkLightProviderMixin.java  ChunkNibbleArrayMixin.java  ExampleMixin.java  FrustumAccessor.java  LivingEntityCrammingMixin.java  ParticleAccessor.java  ParticleManagerAccessor.java  ParticleManagerMixin.java  ParticleMixin.java  ParticleRendererMixin.java  WorldRendererMixin.java
src/main/kotlin/com/nj/: NativeLoader.kt  NightJava.kt
src/main/kotlin/com/nj/collision/: EntityCollisionNative.kt
src/main/kotlin/com/nj/datafixer/: DataFixerNative.kt
src/main/kotlin/com/nj/light/: LightNative.kt
src/main/kotlin/com/nj/mixin/: ChunkHeightAndBiomeFixMixin.kt  ChunkPalettedStorageFixMixin.kt
src/main/kotlin/com/nj/particle/: ParticleNativeLib.kt
src/main/kotlin/com/nj/render/: RenderNative.kt
src/main/resources/: fabric.mod.json  nightjava.accesswidener  nightjava.mixins.json
